# plotly_dashboard

./: .gitignore  devbox.json  make_clean.sh  readme.md  tar.sh
api/: main.py  pyproject.toml  requirements.txt  run.sh
api/data/: dashboard_config.json
api/data/hi/: tmp.json
api/src/database/: db.py
api/src/models/: schemas.py
api/src/services/: option_handler.py  parameter_handler.py  parameter_parser.py  session_manager.py  share_manager.py  visualization.py
api/src/utils/: cascade_options.py
api/tests/: test_cascade_options.py
data/adol/: tmp1.json  tmp12.json  tmp2.json
data/tmp/: haha.json
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.js  index.css  index.js
web/src/components/: Dashboard.js  DashboardView.js  DataTable.js  EditModal.js  EditView.js  OutputModal.js  ParamEditView.js  ParameterControls.js  ParameterEditModal.js  PlaygroundView.js  PrintModal.js  PythonEditor.js  PythonVisualizer.js  SQLEditor.js  SQLPythonDashboard.js  SQLQueryEditor.js  Share.js  ShareView.js  Visualization.js  VisualizationEditView.js  VisualizationResult.js  Visualizer.js  VisualizerDisplayView.js  VisualizerOptions.js
web/src/hooks/: useParameters.js  useSQLQuery.js  useVisualizerContext.js
web2/: package-lock.json  package.json  tsconfig.json  vite.config.js
web2/src/: styles.css
web2/src/api/: dashboard.ts  report.ts  types.ts
web2/src/components/: EditModal.tsx
web2/src/lib/: axios.ts  store.ts
web2/src/routes/: __root.tsx  edit.tsx
web2_back/: package-lock.json  package.json  tsconfig.json
(+4 files in other folders)
